Fixed crust piece dragging with resized window bug
Temporarily removing "Show Labels" on 2nd tab until those labels are implemented
Sensors now read out correct values in 2nd tab (point-intersection model working)
Fixed Rewind button "enabled" refreshing state
Fixed window resizing bug
Fixed Mac slider bugs by switching to new time slider style
# 0.00.24 (62430) Mar 11, 2012
Density meter updated to speedometer-style (by SR)
Added fault valley for transform motion
Added random terrain variations in 2nd tab
Added subduction mountain generation
Reduced subduction trench depth
# 0.00.23 (62415) Mar 11, 2012
Added initial version for "subduction" animation
# 0.00.22 (62388) Mar 9, 2012
Main view in 2nd tab is zoomed in further to see more detail (grain and continental collision were also slightly adjusted to match)
Handles in the manual mode drag at 1/4 of the rate
Increased ocean-surface coloring contrast to show off mid-oceanic ridge
Asthenosphere now doesn't move in the 2nd tab
Changed oceanic lithosphere heights
Fixed triangles in the "rift" view
# 0.00.21 (62367) Mar 9, 2012
Rift boundary changes
Disallowing divergent/transform behavior between oceanic/continental
# 0.00.20 (61724) Feb 24, 2012
Renamed the Options panel to "View", and moved the reset/rewind buttons out of it
Renamed "combined" coloring to "Both"
Added magma to rifting behavior
Increased vertical resolution for cross section, and reduced horizontal resolution.
# 0.00.19 (61657) Feb 23, 2012
Initial (rough and blocky) version of the rift boundary
Added experimental "combined" temperature-density view
Mountain refinement in collsisions
# 0.00.18 (61414) Feb 16, 2012
2/16/12 Experimenting with "mountains" in continental collision
# 0.00.17 (61306) Feb 13, 2012
Added ability to limit simulation time on animations
Added "Rewind" button to the plate motion tab
Increased the "texture" contrast
Added approximate continental collision model, crust/terrain changes to accommodate.